Чуть чуть фиксы и чота новое