@@ -2,13 +2,17 @@ package com.lakePop.userService.application.security;
 
 import com.lakePop.userService.api.models.UserAuthDTO;
 import com.lakePop.userService.api.models.UserDTO;
+import com.lakePop.userService.api.models.UserRegDTO;
 import com.lakePop.userService.application.UserService;
 import com.lakePop.userService.application.interfaces.IUserMapper;
+import com.lakePop.userService.application.interfaces.IUserRepository;
 import com.lakePop.userService.domain.User;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
+
+import java.util.ArrayList;
 
 
 @RequiredArgsConstructor
@@ -21,17 +25,23 @@ public class AuthService {
     private final IUserMapper mapper;
     private final BCryptPasswordEncoder passwordEncoder;
 
-    public void regUser(UserDTO userData) {
-        User userByEmail = userService.findUserByEmail(userData.getEmail());
+    public void regUser(UserRegDTO userData) {
 
-        if (userByEmail != null) {
-            throw new IllegalArgumentException(String.format("User with email [%s] already exists", userData.getEmail()));
+        if (userService.existsByEmail(userData.getEmail())) {
+            throw new IllegalArgumentException(
+                    "User with email [%s] already exists".formatted(userData.getEmail())
+            );
         }
 
-        String encodedPassword = passwordEncoder.encode(userData.getPassword());
-        userData.setPassword(encodedPassword);
+        User user = User.builder()
+                .username(userData.getUsername())
+                .email(userData.getEmail())
+                .password(passwordEncoder.encode(userData.getPassword()))
+                .type("Buyer")
+                .orders(new ArrayList<>())
+                .build();
 
-        userService.createUser(mapper.userDTOtoUser(userData));
+        userService.createUser(user);
 
         log.info("User was successfully registered {}", userData);
     }
